# iort_lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
certs/: aws-root-ca.pem  certificate.pem.crt  private.pem.key
dep/: CMakeLists.txt
inc/: config.h
lib/iort_lib/: iort.hpp
src/iort_lib/: iort.cpp  publisher.cpp
